--- a/HeapSort/nbproject/project.properties
+++ b/HeapSort/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=heapsort.HeapSort
+main.class=heapsort.Sorter
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
